fixed components new alignments and dimens for bootstrap v4

--- a/sass/layout/_bg-layout.sass
+++ b/sass/layout/_bg-layout.sass
@@ -1,6 +1,7 @@
 .header-background
   position: relative
   display: block
+  z-index: -1
   width: 100%
   height: 370px
   background: url("../assets/background.png")
