--- a/sass/layout/_blog-layout.sass
+++ b/sass/layout/_blog-layout.sass
@@ -5,12 +5,6 @@
   width: 100%
   height: 315px
 
-.breadcrumb
-  background-color: transparent
-  padding: 0 0 0px
-  .breadcrumb-item
-    color: $color-font-gray2
-
 .blog-text-content
   padding: 70px 40px 60px
   background-color: $color-white
@@ -21,6 +15,13 @@
   p
     text-align: left
     padding: 0px 0 10px
+
+
+.breadcrumb
+  background-color: transparent
+  padding: 0 0 0px
+  .breadcrumb-item
+    color: $color-font-gray2
 
 
 .blog-img-content
@@ -66,7 +67,7 @@
       text-align: center
       display: block
     .breadcrumb
-      display: inline-block
+      display: inline-flex
 
 //Medium break point
 @media (min-width: 768px)
@@ -81,7 +82,7 @@
     .ancher-read-more
       text-align: left
     .breadcrumb
-      display: inline-block
+      display: inline-flex
 
 //Large break point
 @media (min-width: 992px)
