--- a/sass/layout/_education-layout.sass
+++ b/sass/layout/_education-layout.sass
@@ -61,7 +61,7 @@
 .vertical-line
   position: absolute
   width: 5px
-  height: 460px
+  height: 490px
   z-index: -1
   left: 50%
   margin-top: 50px
@@ -104,7 +104,7 @@
     margin: auto
 
   .vertical-line
-    height: 600px
+    height: 650px
 
 //Large break point
 @media (min-width: 992px)
@@ -112,4 +112,4 @@
     width: 410px
 
   .vertical-line
-    height: 460px
+    height: 480px
