--- a/sass/layout/_skill-layout.sass
+++ b/sass/layout/_skill-layout.sass
@@ -2,6 +2,7 @@
   background-color: $color-primary-green
 
 .progress
+  height: 4px
   background-color: darken($color-primary-green, 5%)
 
 .progress-bar
